@@ -13,6 +13,8 @@
  *******************************************************************************/
 package org.eclipse.jdt.internal.debug.eval.ast.instructions;
 
+import java.text.MessageFormat;
+
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
@@ -21,7 +23,6 @@ import org.eclipse.jdt.debug.core.IJavaPrimitiveValue;
 import org.eclipse.jdt.debug.core.IJavaValue;
 import org.eclipse.jdt.internal.debug.core.JDIDebugPlugin;
 
-import com.ibm.icu.text.MessageFormat;
 
 /**
  * Resolves an array access - the top of the stack is the position, and the
@@ -45,7 +46,7 @@ public class ArrayAccess extends ArrayInstruction {
 							IStatus.OK,
 							MessageFormat
 									.format(InstructionsEvaluationMessages.ArrayAccess_illegal_index,
-											new Object[] { new Integer(index) }),
+											new Object[] { Integer.valueOf(index) }),
 							null));
 		}
 		push(array.getVariable(index));
