@@ -13,6 +13,7 @@
  *******************************************************************************/
 package org.eclipse.jdt.internal.debug.core.breakpoints;
 
+import java.text.MessageFormat;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,7 +29,6 @@ import org.eclipse.jdt.debug.core.JDIDebugModel;
 import org.eclipse.jdt.internal.debug.core.JDIDebugPlugin;
 import org.eclipse.jdt.internal.debug.core.model.JDIDebugTarget;
 
-import com.ibm.icu.text.MessageFormat;
 import com.sun.jdi.AbsentInformationException;
 import com.sun.jdi.ReferenceType;
 import com.sun.jdi.VMDisconnectedException;
@@ -74,8 +74,7 @@ public class JavaTargetPatternBreakpoint extends JavaLineBreakpoint implements
 				addLineBreakpointAttributes(attributes, getModelIdentifier(),
 						true, lineNumber, charStart, charEnd);
 				addSourceNameAndHitCount(attributes, sourceName, hitCount);
-				attributes.put(SUSPEND_POLICY, new Integer(
-						getDefaultSuspendPolicy()));
+				attributes.put(SUSPEND_POLICY, Integer.valueOf(getDefaultSuspendPolicy()));
 				// set attributes
 				ensureMarker().setAttributes(attributes);
 
@@ -215,7 +214,7 @@ public class JavaTargetPatternBreakpoint extends JavaLineBreakpoint implements
 			attributes.put(SOURCE_NAME, sourceName);
 		}
 		if (hitCount > 0) {
-			attributes.put(HIT_COUNT, new Integer(hitCount));
+			attributes.put(HIT_COUNT, Integer.valueOf(hitCount));
 			attributes.put(EXPIRED, Boolean.FALSE);
 		}
 	}
